<resources>
	<string name="app_version">4.6.2</string>
	<string name="app_name">JenkinsMobi</string>
	<string name="app_name_version">JenkinsMobi Ver.4.6.2</string>
    <string name="app_company">LMIT</string>
	<string name="pull_to_refresh_pull_label">Pull to refresh...</string>
	<string name="pull_to_refresh_release_label">Release to refresh...</string>
	<string name="pull_to_refresh_refreshing_label">Loading...</string>
	<string name="pull_to_refresh_tap_label">Loading...</string>
	<string name="request_aborted">"Request aborted"</string>
	<string name="add_contact">Add contact</string>
	<string name="already_present_in">{0} already present in {1}</string>
	<string name="error_adding_contact">Error during adding contact</string>
	<string name="added_to_account">{0} has been added to selected account ({1})</string>
	<string name="artifacts">Artifacts</string>
	<string name="artifacts_list">Artifact list</string>
	<string name="artifact_can_be_viewed">Seems that this artifact can be viewed as text: do you want to download it and view?</string>
	<string name="artifact_cannot_be_viewed">Seems that this artifact cannot be viewed as text: do you want to download it and view anyway?</string>
	<string name="stop">Stop</string>
	<string name="reload">Reload</string>
	<string name="resume">Resume</string>
	<string name="changest_by">Changeset by </string>
	<string name="show_edited_file_list">Show edited file list</string>
	<string name="show_modified_file_list">Show modified file list</string>
	<string name="show_removed_file_list">Show removed file list</string>
	<string name="show_added_file_list">Show added file list</string>
	<string name="build_change_detail">Build change detail</string>
	<string name="changes">Changes</string>
	<string name="no_recent_changes">No changes for this build</string>
	<string name="build_history">Build history</string>
	<string name="no_more_builds_to_load">No more builds to load</string>
	<string name="failed_tests">Failed tests</string>
	<string name="failed_test_row_format">{0} on {1} ({2} skipped)</string>
	<string name="load_more_build_format">Load {0} more builds</string>
	<string name="all_builds_already_loaded">All builds already loaded</string>
	<string name="loading_more_builds">Loading more builds...</string>
	<string name="monitor_service_stopped_now">Monitor Service Stopped NOW</string>
	<string name="monitor_started_notification_bar">QAExplorer Build Monitor Started</string>
	<string name="monitor_running_notification_bar">QAExplorer Build Monitor is running</string>
	<string name="job_changed_status_format">{0} has changed its status</string>
	<string name="sound_notification_pref">Sound notification</string>
	<string name="vibrate_notification_pref">Vibrate notification</string>
	<string name="message_notification_pref">Message notification</string>
	<string name="only_failed_build_notification_pref">Notify only failed builds</string>
	<string name="monitor_interval_pref">Monitor Interval (minutes)</string>
	<string name="build_queue_details">Build queue details</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="job_blocked">Blocked</string>
	<string name="job_stuck">Stuck</string>
	<string name="job_queue_reason">Reason</string>
	<string name="job_queue_desc">Desc.</string>
	<string name="build_queue">Build queue</string>
	<string name="no_job_in_queue">No jobs in queue</string>
	<string name="launching_build">Launching this build...</string>
	<string name="hidden_password">(hidden password)</string>
	<string name="unsupported_params_alert">This build has some unsupported parameters: they will be used with their default values</string>
	<string name="build_with_params_view_title">Fill parameters to launch build</string>
	<string name="wall_title_format">{0}</string>
	<string name="logging_out">Logging out...</string>
	<string name="views">Views</string>
	<string name="nodes">Nodes</string>
	<string name="monitor">Monitor</string>
	<string name="users">Users</string>
	<string name="queue">Queue</string>
	<string name="node_detail_view_title">Node status</string>
	<string name="node_name">Node name</string>
	<string name="node_status">Status</string>
	<string name="node_operating_system">Operating system</string>
	<string name="node_executors">Number of executors</string>
	<string name="node_ram_available">RAM available</string>
	<string name="node_spec_about">about {0} MB</string>
	<string name="node_total_ram_available">RAM total</string>
	<string name="node_swap_available">SWAP available</string>
	<string name="node_total_swap_available">SWAP total</string>
	<string name="node_list_view_title">Nodes</string>
	<string name="node_executor_arch_format">{0} executor(s) - {1}</string>
	<string name="node_executor_format">{0} executor(s)</string>
	<string name="configurator_view_title">Settings</string>
	<string name="conf_entry_desc_hint">Instance description</string>
	<string name="conf_entry_hostname_hint">Jenkins URL</string>
	<string name="conf_entry_suffix_hint">Path suffix</string>
	<string name="conf_entru_portnum_hint">Port number</string>
	<string name="default_string">default</string>
	<string name="conf_entry_username_hint">Username</string>
	<string name="conf_entry_password_hint">Password</string>
	<string name="conf_entry_max_console_size_hint">Max console output size (KB)</string>
	<string name="conf_save_question">Do you want to save changes?</string>
	<string name="conf_default_description">New instance</string>
	<string name="conf_remove_entry_confirm">Do you really want to remove this configuration?</string>
	<string name="conf_section_network">Network settings</string>
	<string name="conf_entry_desc">Description</string>
	<string name="conf_entry_hostname">Host</string>
	<string name="conf_entry_https">Check to use HTTPS protocol</string>
	<string name="conf_entry_port">Port</string>
	<string name="conf_entry_xpath">Check to use XPath</string>
	<string name="conf_entry_conn_timeout">Connection timeout (sec)</string>
	<string name="conf_entry_load_max_items">Load max items</string>
	<string name="conf_entry_load_max_items_hint">The maximum number of items to load at time when possible</string>
	<string name="conf_entry_max_console_size">Build log max size</string>
	<string name="conf_entry_override_url">Override Jenkins URL</string>
	<string name="conf_entry_override_hint">Check to override Jenkins url with configured one</string>
	<string name="conf_entry_use_xsl">Use XSLT for xml artifact</string>
	<string name="conf_entry_use_xsl_hint">Check to apply a XSL tranfromation for an improved xml artifact viewer experience</string>
	<string name="conf_entry_preview_configuration">Preview configuration</string>
	<string name="conf_network_section">Network details</string>
    <string name="conf_security_enabled">Security enabled</string>
	<string name="conf_security_section">Security settings</string>
	<string name="conf_entry_test">Test configuration</string>
	<string name="conf_entry_delete">Delete configuration</string>
	<string name="conf_section_bees_operations">CloudBees Account Operations</string>
	<string name="conf_entry_manages_bees_account">Manage CloudBees Account</string>
	<string name="conf_save_progress">Config validation</string>
	<string name="conf_save_validation">Connect and validate settings</string>
	<string name="conf_save_validation_failed">Validation FAILED\n%s\nReview your settings and try again</string>
	<string name="conf_save_validation_succeded">Configuration VALIDATED</string>
	<string name="conf_save_validation_otp_request">Insert SSO AuthCode</string>
		<string name="conf_save_to_profile">Storing preferences</string>
					<string name="name">Name</string>
	<string name="classname">Class-name</string>
	<string name="errormessage">Error message</string>
	<string name="standard_output">Standard output</string>
	<string name="standard_error">Standard error</string>
	<string name="stacktrace">Stacktrace</string>
	<string name="complete_error_message">Complete error message</string>
	<string name="test_detail_view_title">Test detail</string>
	<string name="test_list_view_title">Failed tests</string>
	<string name="test_failed_since">Failed since #</string>
	<string name="no_test_results">NO TEST RESULTS</string>
	<string name="smart_conf_default_desc">Define new Jenkins URL</string>
	<string name="smart_conf_select_conf">Select configuration</string>
	<string name="smart_conf_url_hint">Jenkins url</string>
	<string name="smart_conf_security_hint">Jenkins security</string>
	<string name="next">Next</string>
	<string name="fast_job_selection_view_title">Add/Remove jobs to monitor</string>
	<string name="back">Back</string>
	<string name="confirm">Confirm</string>
	<string name="changes_edited_files">Edited files</string>
	<string name="changes_modified_files">Modified files</string>
	<string name="changes_added_files">Added files</string>
	<string name="changes_removed_files">Removed files</string>
	<string name="crash_report_question">Crash report detected\nDo you want to report an incident ?</string>
	<string name="crash_email_body">Hi,\nmy QAExplorer crashed when I was performing the following operations:\n[please specify]\nAttached the crash report.\n</string>
	<string name="crash_email_subject">QAExplorer crash</string>
	<string name="connecting_to_instance">Connecting to Jenkins...</string>
	<string name="authentication_failed_unknown_error">Authentication failed - unknown error</string>
	<string name="settings">Settings</string>
	<string name="informations">Informations</string>
	<string name="module_info_view_title">Module info</string>
	<string name="build_info_view_title">Build info</string>
	<string name="stop_build">Stop this build</string>
	<string name="start_build">Start this build</string>
	<string name="tap_to_build_first_time">Tap here to build this job</string>
	<string name="build_monitored">monitored</string>
	<string name="last_build_was_info">Last build was {0} ago\nand took {1}</string>
	<string name="build_inprogress_info">Build in progress from {0}</string>
	<string name="job_in_queue">This job is in queue: {0}</string>
	<string name="details">Details</string>
	<string name="build_info_out_console">Output Console</string>
	<string name="build_info_recent_changes">Recent changes</string>
	<string name="build_info_modules">Modules</string>
	<string name="build_info_artifacts">Artifacts</string>
	<string name="remove_job_from_monitor">Remove from monitor</string>
	<string name="add_job_to_monitor">Add to monitor</string>
	<string name="stopping_build">Stopping this build...</string>
	<string name="starting_build">Starting this build...</string>
	<string name="no_test_while_build_running">The build is running, no tests result available yet</string>
	<string name="job_list_view_title">View detail</string>
	<string name="job_list_filter_all">All</string>
	<string name="job_list_filter_stable">Stable</string>
	<string name="job_list_filter_unstable">Unstable</string>
	<string name="job_list_filter_failed">Failed</string>
	<string name="job_list_filter_inprogress">In progress</string>
	<string name="legal_notice_view_title">Legal notice</string>
	<string name="maven2_modules_list_view_title">Maven2 Modules</string>
	<string name="email_build_log">Email log</string>
	<string name="output_console_view_title">Output Console</string>
	<string name="info_device_name">Device name: {0}</string>
	<string name="info_device_model">Device model: {0}</string>
	<string name="info_device_manufacturer">Device manufacturer: {0}</string>
	<string name="info_device_soft_ver">Firmware version: {0}</string>
	<string name="legal_button_title">Legal</string>
	<string name="no_job_in_monitor_list">NO JOBS\nTap to add jobs</string>
	<string name="stop_monitor">Stop monitor</string>
	<string name="start_monitor">Start monitor</string>
	<string name="remove_jobs_from_monitor">Remove jobs</string>
</resources>